<resources>
    <string name="app_name">anaithum</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">anaithum</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_orders">My Orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="menu_support">Support Desk</string>
    <string name="menu_terms"><![CDATA[Terms & Conditions]]></string>
    <string name="logout">Logout</string>
    <string name="search_hint">Search</string>
    <string name="shop_category">Shop By Category</string>
    <string name="cart">Cart</string>
    <string name="menu_cart">Cart</string>
    <string name="coupon">Coupons</string>
    <string name="para1">Lorem ipsum dolor sit amet consectetur adipisicing elit.  Distinctio eaque incidunt quibusdam explicabo recusandae  assumenda aliquam, harum, quod optio pariatur natus rerum vel,  voluptates labore veritatis praesentium aut non rem corporis debitis  unde nemo animi obcaecati! Numquam asperiores error quis. Asperiores  suscipit repellendus ullam iusto ad, maiores distinctio autem et.</string>
    <string name="dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus in placerat neque. Morbi quis arcu elit. Phasellus massa ipsum, maximus vel ante quis, lobortis lacinia metus. Integer porttitor, enim id facilisis egestas, turpis quam suscipit dui, vitae luctus ligula enim quis est. Aliquam congue cursus metus nec fermentum. Curabitur facilisis aliquam dapibus. Ut vitae metus porta lacus porttitor porta in at lorem. Donec ullamcorper vel quam quis convallis. Sed arcu lorem, mattis nec mattis ut, gravida at libero. Ut quis purus sem. Etiam non interdum dui.</string>
    <string name="discount_symbol">% offer</string>
    <string name="rupee_symbol">₹</string>
    <string name="pincode">Pincode</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="landmark">Landmark</string>
    <string name="alternate_mobile">Alternate Mobile</string>
</resources>
