<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="General">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_account_circle_24dp"
                    android:title="@string/menu_profile" />
                <item
                    android:id="@+id/nav_categories"
                    android:icon="@drawable/category"
                    android:title="@string/menu_categories" />
                <item
                    android:id="@+id/nav_cart"
                    android:icon="@drawable/cart_white"
                    android:title="@string/menu_cart" />

                <item
                    android:id="@+id/nav_orders"
                    android:icon="@drawable/ic_view_list_black_24dp"
                    android:title="@string/menu_orders" />
                <item
                    android:id="@+id/nav_wishlist"
                    android:icon="@drawable/wishlist"
                    android:title="@string/wishlist"/>
                <item
                    android:id="@+id/nav_coupon"
                    android:icon="@drawable/coupon2"
                    android:title="@string/coupon"/>
                <item
                    android:id="@+id/nav_notification"
                    android:icon="@drawable/ic_notifications_white_24dp"
                    android:title="Notification" />
            </group>
        </menu>
    </item>

    <item android:title="Communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_terms"
                    android:icon="@drawable/ic_about_white_24dp"
                    android:title="@string/menu_terms" />
                <item
                    android:id="@+id/nav_support"
                    android:icon="@drawable/communications"
                    android:title="@string/menu_support" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="@string/logout"
        android:visible="false"
        />
</menu>
