<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="60dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Fragment.AddAddressFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/search_border"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_basic"
                android:orientation="vertical">

                <!-- Adress Type-->

                <RelativeLayout

                    android:id="@+id/relativelayout"
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter your Name"
                        android:text=""
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter your Email"
                        android:text=""
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
                <!--pincode-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pincode"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/addPincode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="gravity"
                        android:layout_marginTop="10dp"/>

                </LinearLayout>

                <!--City-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/addCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"/>

                </LinearLayout>


                <!--state-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/state"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/addState"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"/>

                </LinearLayout>

                <!--Area-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/area"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/addArea"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/edtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:text=""
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/edtLandmark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/landmark"
                        android:text=""
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/edtAlternate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/alternate_mobile"
                        android:text=""
                        android:minEms="10"
                        android:maxLength="10"
                        android:inputType="phone"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/margin_basic"
                        android:layout_marginTop="@dimen/margin_basic"
                        android:layout_marginEnd="@dimen/margin_basic"
                        android:layout_marginBottom="@dimen/margin_basic"
                        android:background="@drawable/button"
                        android:hint="@string/landmark"
                        android:text="Update"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btnClear"
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="@dimen/margin_basic"
                        android:layout_marginTop="@dimen/margin_basic"
                        android:layout_marginEnd="@dimen/margin_basic"
                        android:layout_marginBottom="@dimen/margin_basic"
                        android:background="@drawable/button"
                        android:text="Clear"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"
                        android:textStyle="bold"

                        />

                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>